# waze-osint-tracker

./: .gitignore  .pre-commit-config.yaml  README.md  africa_grid.py  americas_grid.py  analysis.py  anomaly_detection.py  anomaly_feed.py  asia_grid.py  benchmark_audit.py  benchmark_threads.py  briefing.py  cli.py  collector.py  collector_europe.py  collector_global.py  collector_worldwide.py  config.yaml  config_africa.yaml  config_americas.yaml  config_asia.yaml  config_europe.yaml  config_oceania.yaml  config_oracle.yaml  database.py  database_factory.py  database_oracle.py  docker-compose.oracle.yml  docker-compose.yml  dossier_builder.py  encounter_prediction.py  europe_grid.py  frontend-slides.html  geofence.py  grid.py  install.sh  intel_combined.py  intel_cooccurrence.py  intel_dossier.py  intel_pipeline.py  (+21 more)
papers/: paper.tex
scripts/: block-claude-generated.sh  block-env-files.sh  check_generated_markdown.py  init_oracle.sql  migrate_sqlite_to_oracle.py
tests/: test_analysis.py  test_anomaly_detection.py  test_anomaly_feed.py  test_anomaly_feed_api.py  test_battle_hardening.py  test_briefing.py  test_briefing_api.py  test_collector.py  test_database.py  test_database_factory.py  test_database_oracle.py  test_dossier_api.py  test_dossier_builder.py  test_encounter_api.py  test_encounter_map_api.py  test_encounter_prediction.py  test_fingerprint_api.py  test_geofence.py  test_geofence_api.py  test_grid.py  test_hook_scripts.py  test_intel_combined.py  test_intel_cooccurrence.py  test_intel_dossier.py  test_intel_pipeline.py  test_intel_prediction.py  test_intel_routines.py  test_intel_vectors.py  test_ops_diagnostics.py  test_privacy_heatmap.py  test_privacy_score.py  test_repo_hygiene.py  test_report_api.py  test_report_generator.py  test_runtime_support.py  test_security.py  test_smoke_test.py  test_social_graph.py  test_social_graph_api.py  test_social_graph_widget.py  (+9 more)
tui/: .gitignore  Makefile  go.mod
tui/cmd/waze-tui/: main.go
tui/internal/api/: client.go  client_test.go  types.go
tui/internal/app/: app.go  app_test.go
tui/internal/components/: components_test.go  cooccurrence.go  eventfeed.go  intelview.go  locationview.go  privacyview.go  regionpane.go  sparkline.go  statusbar.go  toast.go  tripview.go  userlist.go
tui/internal/process/: manager.go  manager_test.go
tui/internal/screens/: dashboard.go  history.go  investigation.go  nav.go  (+4 more)
tui/tapes/: all.tape  dashboard.tape  history.tape  investigation.tape  regions.tape  splash.tape
web/: app.py
web/templates/: dossier.html  index.html  report.html
(+6 files in other folders)
