[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waze-logs"
version = "1.2.2"
description = "Worldwide Waze traffic event collection and analysis tool - demonstrates location privacy risks in crowdsourced traffic applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "jasperan", email = "jasperan@users.noreply.github.com"}
]
maintainers = [
    {name = "jasperan", email = "jasperan@users.noreply.github.com"}
]
keywords = [
    "waze",
    "traffic",
    "privacy",
    "osint",
    "geolocation",
    "security-research",
    "data-collection"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pyyaml>=6.0",
    "tabulate>=0.9",
    "flask>=2.0",
    "rich>=13.0",
    "oracledb>=2.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/jasperan/waze-osint-tracker"
Repository = "https://github.com/jasperan/waze-osint-tracker"
Issues = "https://github.com/jasperan/waze-osint-tracker/issues"

[project.scripts]
waze = "cli:cli"

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}]
lint = ["ruff>=0.9", "ty>=0.0.1"]
test = ["pytest>=8.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["cli", "collector", "collector_europe", "collector_worldwide", "database", "database_oracle", "analysis", "intel_vectors", "intel_routines", "intel_cooccurrence", "intel_prediction", "intel_dossier", "intel_combined", "intel_pipeline", "waze_client", "grid"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["web*"]

[tool.setuptools.package-data]
"*" = ["templates/*.html", "static/*"]
